syntax = "proto3";
package ghostcloud.ghostcloud;

option go_package = "ghostcloud/x/ghostcloud/types";

message FileContent {
  bytes content = 1;
}
